[gd_scene load_steps=7 format=3 uid="uid://qerg7k26cg1h"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_xjuaq"]
[ext_resource type="Texture2D" uid="uid://ij5yuyh55qx6" path="res://assets/backgrounds/background2.png" id="2_5krwd"]
[ext_resource type="PackedScene" uid="uid://d32v53fthbj8v" path="res://scenes/player.tscn" id="2_gbgme"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_148fw"]
size = Vector2(1170, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3inm"]
size = Vector2(168, 540)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8npp8"]
size = Vector2(1255, 66)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjuaq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 310)
texture = ExtResource("2_5krwd")

[node name="Player" parent="." instance=ExtResource("2_gbgme")]
position = Vector2(285, 370)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -21.0
offset_top = -16.0
offset_right = 1166.0
offset_bottom = 662.0
color = Color(0, 0, 0, 0.411765)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(579, 575)
shape = SubResource("RectangleShape2D_148fw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-31, 279)
shape = SubResource("RectangleShape2D_y3inm")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1180, 282)
shape = SubResource("RectangleShape2D_y3inm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(617.5, 23)
shape = SubResource("RectangleShape2D_8npp8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 98.0
offset_right = 1080.0
offset_bottom = 164.0
theme_override_font_sizes/normal_font_size = 40
text = "La Mariposa y El Ni√±o"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -99.0
offset_right = -285.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
alignment = 1

[node name="BosqueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Ir al Bosque"

[node name="CiudadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Ir a la Ciudad"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BosqueButton")
focus_neighbor_bottom = NodePath("../BosqueButton")
text = "Salir"

[connection signal="pressed" from="VBoxContainer/BosqueButton" to="." method="_on_bosque_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CiudadButton" to="." method="_on_ciudad_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
